<resources>
    <string name="app_name">check-in-out</string>
    <string name="action_settings">Settings</string>
    <string name="car_plate">Car Plate</string>
    <string name="flag">Flag</string>
    <string name="submit">Submit</string>
    <string name="comment">Comment</string>
    <string name="purpose_for_the_visit">Purpose for the visit</string>
    <string name="second_name">Second Name</string>
    <string name="name">Name</string>
    <string name="id_number">Id Number</string>
    <string name="check_in_time">check in time</string>
    <string name="check_in_date">check in date</string>
    <string name="phone_number">Phone Number</string>
    <string name="image_for_status">image for status</string>
    <string name="flaged">Flagged</string>
    <string name="in">Inside</string>
    <string name="out">Out</string>
    <string name="time_out">Time Out</string>
    <string name="flag_reason_tv">Please do provide a reason for flaggin this person</string>
    <string name="reason_flag_et">Reason</string>
    <string name="search">Search</string>
</resources>
